data/manifests/cilium/network-policy-allow-dns.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Deny everything"
metadata:
  name: "egress-allow-dns"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: httpbin
      app: tblshoot
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "kube-system"
            "k8s:k8s-app": "kube-dns"
          toPorts:
            - ports:
                - port: "53"
                  protocol: ANY
