data/manifests/cilium/network-policy-allow-http-l3.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Allow GET and DELETE"
metadata:
  name: "httpbin-allow-http-l3"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: httpbin
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: tblshoot
      fromPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "Allow GET and DELETE"
metadata:
  name: "tblshoot-allow-http-l3"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: tblshoot
  egress:
    - toEndpoints:
        - matchLabels:
            app: httpbin
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
